--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,21 +1,20 @@
 .navbar {
-  margin-top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #333;
-  padding: 16px 32px;
+  background: #e2f4f1;
+  padding: 10px 32px;
   border-radius: 0 0 10px 10px;
-  margin-bottom: 16px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.navbar h1 {
-  color: #f95255;
+/* .navbar span {
+  color: #00d5a7;
   margin: 0;
-  font-size: 32px;
-  font-weight: bolder;
-  letter-spacing: 1px;
-}
+  font-size: 34px;
+  font-weight: 900;
+  font-family: monospace;
+} */
 
 .links {
   list-style: none;
@@ -26,15 +25,16 @@
 }
 
 .links li a {
-  color: #fff;
+  color: #00c59a;
   text-decoration: none;
   font-size: 18px;
+  font-weight: 600;
   padding: 8px 20px;
   border-radius: 8px;
   transition: all 0.2s, color 0.2s;
 }
 
 .links li a:hover {
-  background: #f1356d;
-  color: #fff;
+  background: #01bba3;
+  color: #adf9e8;
 }
