--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
 :root {
-  --primary-500: #645cff;
+  --primary-500: #49b5d0;
   --text-secondary-color: #888;
   --fluid-width: 98vw;
   --max-width: 1170px;
   --nav-height: 4rem;
   --letter-spacing: 0.1rem;
+
+  /* DARK MODE */
+  --dark-mode-bg-color: #333;
+  --dark-mode-text-color: #f0f0f0;
+  --dark-mode-bg-secondary-color: #3f3f3f;
+  --dark-mode-text-secondary-color: var(--grey-300);
+  --background-color: var(--grey-50);
+  --text-color: var(--grey-900);
+  --background-secondary-color: var(--white);
+  --text-secondary-color: var(--grey-500)
 }
 
 *,
@@ -18,8 +28,15 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: #f0f4f8;
-  color: #222;
+  background: var(--background-color);
+  color: var(--text-color);
+}
+
+.dark-theme {
+  --text-color: var(--dark-mode-text-color);
+  --background-color: var(--dark-mode-bg-color);
+  --text-secondary-color: var(--dark-mode-text-secondary-color);
+  --background-secondary-color: var(--dark-mode-bg-secondary-color);
 }
 
 ul {
@@ -111,7 +128,7 @@ p {
 }
 
 .btn:hover {
-  background: #4943e6;
+  background: #1e8aa4;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
 }
 
